<resources>
    <string name="app_name">SQLiteTutorial</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="add_new_person">Add</string>
    <string name="button_submit_person">Submit</string>
    <string name="button_remove_person">Delete</string>

    <string name="title_activity_add_person">AddPersonActivity</string>

    <string name="hint_enter_person_name">Enter Name...</string>
    <string name="hint_enter_person_email">Enter Email...</string>
    <string name="hint_enter_person_phone">Enter Phone Number...</string>

    <string name="persons_name_text">Name :</string>
    <string name="persons_mail_text">Email :</string>
    <string name="persons_phone_text">Phone Number :</string>

    <string name="add_new_person_text">Enter the details of the Person below</string>
    <string name="title_activity_view_single_person">ViewSinglePerson</string>

</resources>
