<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.dean.sqlitetutorial.AddPersonActivity">

    <TextView
        android:text="@string/add_new_person_text"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/enter_name_field"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:hint="@string/hint_enter_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/enter_phone_field"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:hint="@string/hint_enter_person_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/enter_email_field"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:hint="@string/hint_enter_person_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_submit_new_person"
        android:text="@string/button_submit_person"
        android:padding="10dp"
        android:onClick="onClick"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
