<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.dean.sqlitetutorial.ViewSinglePerson">

    <TextView
        android:text="@string/persons_name_text"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/display_name_field"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/persons_phone_text"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/display_phone_field"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/persons_mail_text"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/display_mail_field"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/remove_person_button"
        android:onClick="onRemoveClick"
        android:text="@string/button_remove_person"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
